--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -3,17 +3,11 @@
         <%= menu_item "Start", root_path %>
         <%= menu_divider %>
         <%= menu_item "Uczniowie", pupils_path %>
-
-
-
+        <%= menu_item "Przedmioty", subjects_path %>
 
         <%= drop_down "Products" do %>
             <%= menu_item "Nauczyciele", 'teachers_path' %>
-
-
         <% end %>
-        <%= menu_item "About Us", 'about_us_path' %>
-        <%= menu_item "Contact", 'contact_path' %>
     <% end %>
 
 <% end %>
