--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,15 +1,13 @@
-<%- model_class = Subject -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1>Przedmioty</h1>
 </div>
-<table class="table table-striped">
+<table data-toggle="table" data-search="true" >
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:teacher) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th>id</th>
+      <th>Nazwa przedmiotu</th>
+      <th>Nauczyciel</th>
+      <th>Akcje</th>
     </tr>
   </thead>
   <tbody>
@@ -18,23 +16,19 @@
         <td><%= link_to subject.id, subject_path(subject) %></td>
         <td><%= subject.name %></td>
         <td><%= subject.teacher %></td>
-        <td><%=l subject.created_at %></td>
         <td>
-          <%= link_to t('.show', :default => t("helpers.links.show")),
-                      subject_path(subject), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_subject_path(subject), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      subject_path(subject),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
+          <%= link_to 'Pokaż', subject_path(subject), class: 'btn btn-default btn-xs' %>
+          <%= link_to 'Edycja', edit_subject_path(subject), class: 'btn btn-default btn-xs' %>
+          <%= link_to'Usuń', subject_path(subject),
+                      method: :delete,
+                      data: { confirm: 'Jesteś pewien?' },
+                      class: 'btn btn-xs btn-danger' %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to "Nowy",
             new_subject_path,
             :class => 'btn btn-primary' %>
