--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -3,10 +3,11 @@
         <%= menu_item "Start", root_path %>
         <%= menu_divider %>
         <%= menu_item "Uczniowie", pupils_path %>
-        <%= menu_item "Przedmioty", subjects_path %>
 
-        <%= drop_down "Products" do %>
+        <%= drop_down "Ustawienia" do %>
             <%= menu_item "Nauczyciele", 'teachers_path' %>
+            <%= menu_item "Przedmioty", subjects_path %>
+            <%= menu_item "Oceny", grades_path %>
         <% end %>
     <% end %>
 
