--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -5,7 +5,7 @@
         <%= menu_item "Uczniowie", pupils_path %>
 
         <%= drop_down "Ustawienia" do %>
-            <%= menu_item "Nauczyciele", 'teachers_path' %>
+            <%= menu_item "Nauczyciele", teachers_path %>
             <%= menu_item "Przedmioty", subjects_path %>
             <%= menu_item "Oceny", grades_path %>
         <% end %>
