--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,33 +1,33 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Teachers</h1>
-
-<table>
+<div class="page-header">
+  <h1>Teachers</h1>
+</div>
+<%= link_to 'Nowy nauczyciel', new_teacher_path, class: 'btn btn-primary' %>
+<table data-toggle="table" data-search="true">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Lastname</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Imię</th>
+    <th>Nazwisko</th>
+    <th>Email</th>
+    <th>Telefon</th>
+    <th>Akcje</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @teachers.each do |teacher| %>
+  <% @teachers.each do |teacher| %>
       <tr>
         <td><%= teacher.name %></td>
         <td><%= teacher.lastname %></td>
-        <td><%= teacher.email %></td>
+        <td><a href="mailto:<%= teacher.email %>" ><%= teacher.email %></a></td>
         <td><%= teacher.phone %></td>
-        <td><%= link_to 'Show', teacher %></td>
-        <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-        <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Show', teacher %>
+          <%= link_to 'Edit', edit_teacher_path(teacher) %>
+          <%= link_to 'Destroy', teacher, method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Teacher', new_teacher_path %>
