--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -1,48 +1,9 @@
-<%= form_for @grade, :html => { :class => "form-horizontal grade" } do |f| %>
-
-  <% if @grade.errors.any? %>
-    <div id="error_expl" class="panel panel-danger">
-      <div class="panel-heading">
-        <h3 class="panel-title"><%= pluralize(@grade.errors.count, "error") %> prohibited this grade from being saved:</h3>
-      </div>
-      <div class="panel-body">
-        <ul>
-        <% @grade.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-        </ul>
-      </div>
-    </div>
+<div class="container">
+  <%= bootstrap_form_for(@grade) do |f| %>
+      <%= f.text_field :short_name, label: 'Krótka nazwa' %>
+      <%= f.text_field :long_name, label: 'Długa nazwa' %>
+      <%= f.text_field :value, label: 'Wartość' %>
+      <%= f.submit 'Zapisz', class: 'btn btn-primary' %>
+      <%= link_to 'Anuluj', pupils_path, :class => 'btn btn-default' %>
   <% end %>
-
-  <div class="form-group">
-    <%= f.label :short_name, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :short_name, :class => 'form-control' %>
-    </div>
-    <%=f.error_span(:short_name) %>
-  </div>
-  <div class="form-group">
-    <%= f.label :long_name, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :long_name, :class => 'form-control' %>
-    </div>
-    <%=f.error_span(:long_name) %>
-  </div>
-  <div class="form-group">
-    <%= f.label :value, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :value, :class => 'form-control' %>
-    </div>
-    <%=f.error_span(:value) %>
-  </div>
-
-  <div class="form-group">
-    <div class="col-lg-offset-2 col-lg-10">
-      <%= f.submit nil, :class => 'btn btn-primary' %>
-      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                grades_path, :class => 'btn btn-default' %>
-    </div>
-  </div>
-
-<% end %>
+</div>
