--- a/app/views/pupils/new.html.erb
+++ b/app/views/pupils/new.html.erb
@@ -1,5 +1,4 @@
-<%- model_class = Pupil -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <h1>Nowy uczeń</h1>
 </div>
-<%= render :partial => 'form' %>
+<%= render partial: 'form' %>
