add subjects to pupils

--- a/app/views/pupils/edit.html.erb
+++ b/app/views/pupils/edit.html.erb
@@ -25,5 +25,5 @@
     <% end %>
     </tbody>
   </table>
-  <%= link_to 'Przedmioty', subject_path(@pupil), class: 'btn btn-primary' %>
+  <%= link_to 'Przedmioty', pupil_subjects_path(@pupil), class: 'btn btn-primary' %>
 </div>
