--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -3,6 +3,6 @@
     <%= f.text_field :name, label: 'Imię' %>
     <%= f.text_field :teacher, label: 'Nauczyciel' %>
     <%= f.submit 'Zapisz', class: 'btn btn-primary' %>
-    <%= link_to 'Anuluj', pupils_path, :class => 'btn btn-default' %>
+    <%= link_to 'Anuluj', pupils_path, class: 'btn btn-default' %>
 <% end %>
 </div>
