--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,25 +1,27 @@
-<%- model_class = Subject -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <h1>Przedmioty</h1>
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dt><strong>Nazwa:</strong></dt>
   <dd><%= @subject.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:teacher) %>:</strong></dt>
+  <dt><strong>Nauczyciel:</strong></dt>
   <dd><%= @subject.teacher %></dd>
 </dl>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              pupil_subjects_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_pupil_subject_path(@subject), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-            pupil_subject_path(@subject),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
-uczniowie:
-<% @subject.pupils.each do |subject| %>
-    <%= subject.name %> <%= subject.lastname %>
-<% end %>
+<%= link_to 'Lista', subjects_path, class: 'btn btn-default' %>
+<div class="container">
+
+  <h3><strong>Uczniowie:</strong></h3>
+  <div class="col-4">
+  <ul class="list-group">
+    <% @subject.pupils.each do |subject| %>
+        <li class="list-group-item list-group-item-action">
+          <%= link_to "#{subject.name} #{subject.lastname}", '/' %>
+        </li>
+    <% end %>
+  </ul>
+</div>
+</div>
+
+
