--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -14,13 +14,16 @@
   <% @subjects.each do |subject| %>
       <tr>
         <td><%= subject.name %></td>
-        <td><%= subject.teacher %></td>
+        <td>
+          <% subject.teachers.each do |teacher| %>
+              <%= teacher.name_displayed %>
+          <% end %>
+        </td>
         <td>
           <%= link_to 'Pokaż', subject_path(subject), class: 'btn btn-default btn-xs' %>
           <%= link_to 'Edycja', edit_subject_path(subject), class: 'btn btn-default btn-xs' %>
           <%= link_to 'Usuń', subject_path(subject),
-                      method: :delete, data: {confirm: 'Jesteś pewien?'},
-                      class: 'btn btn-xs btn-danger' %>
+                      method: :delete, data: {confirm: 'Jesteś pewien?'}, class: 'btn btn-xs btn-danger' %>
         </td>
       </tr>
   <% end %>
