--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -6,7 +6,7 @@
   <dt><strong>Nazwa:</strong></dt>
   <dd><%= @subject.name %></dd>
   <dt><strong>Nauczyciel:</strong></dt>
-  <dd><%= @subject.teacher %></dd>
+  <dd><%= @subject.teachers.first.name_displayed %></dd>
 </dl>
 
 <%= link_to 'Lista', subjects_path, class: 'btn btn-default' %>
@@ -14,14 +14,17 @@
 
   <h3><strong>Uczniowie:</strong></h3>
   <div class="col-4">
-  <ul class="list-group">
-    <% @subject.pupils.each do |subject| %>
-        <li class="list-group-item list-group-item-action">
-          <%= link_to "#{subject.name} #{subject.lastname}", '/' %>
-        </li>
-    <% end %>
-  </ul>
-</div>
+    <ul class="list-group">
+      <% @subject.pupils.each do |subject| %>
+          <li class="list-group-item list-group-item-action">
+            <%= link_to "#{subject.name} #{subject.lastname}", '/' %>
+            <% Grade.all.each do |grade| %>
+            <%= grade.short_name %>
+            <% end %>
+          </li>
+      <% end %>
+    </ul>
+  </div>
 </div>
 
 
