--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,6 +1,7 @@
 <%= nav_bar static: :top, brand: "Moja szkoła", responsive: true, fluid: true do %>
     <%= menu_group do %>
         <%= menu_item "Start", root_path %>
+        <%= menu_item "Dziennik", diary_view_path %>
         <%= menu_divider %>
 
         <%= drop_down "Ustawienia" do %>
