--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,16 @@
 <h2>Nowy użytkownik</h2>
-
 <div class="container">
-  <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= f.text_field :name, label: 'Imię' %>
-      <%= f.text_field :lastname, label: 'Nazwisko' %>
-      <%= f.text_field :email, label: 'email' %>
-      <%= f.password_field :password, autocomplete: 'off' %>
-      <%= f.password_field :password_confirmation, autocomplete: 'off' %>
-      <%= f.submit 'Zapisz', class: 'btn btn-primary' %>
-  <% end %>
-<%= render 'devise/shared/links' %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.text_field :name, label: 'Imię' %>
+          <%= f.text_field :lastname, label: 'Nazwisko' %>
+          <%= f.text_field :email, label: 'email' %>
+          <%= f.password_field :password, autocomplete: 'off', label: 'Hasło' %>
+          <%= f.password_field :password_confirmation, autocomplete: 'off', label: 'Powtórz hasło' %>
+          <%= f.submit 'Zapisz', class: 'btn btn-primary' %>
+      <% end %>
+      <%= render 'devise/shared/links' %>
+    </div>
+  </div>
 </div>
