--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -3,12 +3,13 @@
         <%= menu_item "Start", root_path %>
         <%= menu_item "Dziennik", diary_index_path %>
         <%= menu_divider %>
+            <%= menu_item "Nauczyciele", teachers_path %>
 
         <%= drop_down "Ustawienia" do %>
             <%= menu_item "Uczniowie", pupils_path %>
-            <%= menu_item "Nauczyciele", teachers_path %>
             <%= menu_item "Przedmioty", subjects_path %>
             <%= menu_item "Oceny", grades_path %>
+            <%= menu_item "Użytkownicy", users_path %>
             <%= menu_item "Ustawienia konta", edit_user_registration_path %>
             <%= menu_item "Wyloguj", destroy_user_session_path, method: :delete %>
         <% end %>
