--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,57 +1,30 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f| %>
-    <%= devise_error_messages! %>
-
-    <div class="field">
-      <%= f.label :email %><br/>
-      <%= f.email_field :email, autofocus: true %>
-    </div>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-    <% end %>
-
-    <div class="field">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br/>
-      <%= f.password_field :password, autocomplete: "off" %>
-      <% if @minimum_password_length %>
-          <br/>
-          <em><%= @minimum_password_length %> characters minimum</em>
-      <% end %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %><br/>
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :current_password %> <i>(1we need your current password to confirm your changes)</i><br/>
-      <%= f.password_field :current_password, autocomplete: "off" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Update" %>
-    </div>
-<% end %>
-
-
-
+<h4>Edycja użytkownika:</h4> <h2><%= "#{resource.name} #{resource.lastname}" %></h2>
 <div class="container">
-  <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f| %>
-      <%= f.text_field :name, label: 'Imię' %>
-      <%= f.text_field :lastname, label: 'Nazwisko' %>
-      <%= f.text_field :email, label: 'email' %>
-      <%= f.password_field :password, autocomplete: 'off' %>
-      <%= f.password_field :password_confirmation, autocomplete: 'off' %>
-      <%= f.password_field :current_password, autocomplete: 'off' %>
-      <%= f.submit 'Zapisz', class: 'btn btn-primary' %>
-  <% end %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f| %>
+          <%= f.text_field :name, label: 'Imię' %>
+          <%= f.text_field :lastname, label: 'Nazwisko' %>
+          <%= f.text_field :email, label: 'email' %>
+          </div>
+          <div class="col-md-4">
+            <h4>Zmiana hasła:</h4>
+            <h6>(puste, jeżeli nie zmieniasz)</h6>
 
-
-<h3>Cancel my account</h3>
-
-<p><%= button_to "Usuń konto", registration_path(resource_name), data: {confirm: "Jesteś pewien?"}, method: :delete, class: 'btn btn-danger' %></p>
-
-<%= link_to "Anuluj", :back %>
+            <%= f.password_field :password, autocomplete: 'off', label: 'Hasło' %>
+            <%= f.password_field :password_confirmation, autocomplete: 'off', label: 'Powtórz hasło' %>
+          </div>
+          </div>
+          <div class="row">
+            <div class="col-md-8">
+            <%= f.password_field :current_password, autocomplete: 'off', label: 'Bieżące hasło' %>
+            </div>
+          </div>
+      <div class="row">
+            <%= f.submit 'Zapisz', class: 'btn btn-success' %>
+      <% end %>
+      <%= link_to "Anuluj", :back, class: 'btn btn-primary' %>
+      <%= link_to "Usuń konto", registration_path(resource_name), data: {confirm: "Jesteś pewien?"}, method: :delete, class: 'btn btn-danger' %>
+      </div>
+      </div>
+      </div>
