--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
           <%= f.text_field :email, label: 'email' %>
           <%= f.password_field :password, autocomplete: 'off', label: 'Hasło' %>
           <%= f.password_field :password_confirmation, autocomplete: 'off', label: 'Powtórz hasło' %>
-          <%= f.submit 'Zapisz', class: 'btn btn-primary' %>
+          <%= f.submit 'Zapisz', class: 'btn btn-success' %>
       <% end %>
       <%= render 'devise/shared/links' %>
     </div>
