--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,13 @@
 
 <body>
 <%= render 'layouts/menu' %>
+
 <div class="container-fluid">
-  <%= yield %>
+<%= render 'layouts/messages' %>
+
+ <%= yield %>
 </div>
-<%# console %>
+<%= console %>
 <script>
 
 </script>
