--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
         <td>
           <%# link_to 'Pokaż', teacher, class: 'btn btn-default btn-xs' %>
           <%= link_to 'Edytuj', edit_user_path(user), class: 'btn btn-default btn-xs' %>
-          <%# link_to 'Usuń', teacher, method: :delete, data: {:confirm => 'Jesteś pewien?'},
+          <%= link_to 'Usuń', user, method: :delete, data: {:confirm => 'Jesteś pewien?'},
                       class: 'btn btn-xs btn-danger' %>
         </td>
       </tr>
