--- a/app/views/diary/subjects.html.erb
+++ b/app/views/diary/subjects.html.erb
@@ -12,11 +12,7 @@
   <% @subjects.each do |subject| %>
       <tr>
         <td><%= link_to subject.name, diary_view_path %></td>
-        <td>
-          <% subject.teachers.each do |teacher| %>
-              <%= teacher.name_displayed %>
-          <% end %>
-        </td>
+        <td><%= subject.user.name_displayed %></td>
 
       </tr>
   <% end %>
