--- a/app/views/pupils/edit.html.erb
+++ b/app/views/pupils/edit.html.erb
@@ -18,11 +18,8 @@
     <% @pupil.subjects.each do |subject| %>
         <tr>
           <td><%= subject.name %></td>
-          <td><%= subject.teachers.first.name_displayed %></td>
-
+          <td><%= subject.user.name_displayed %></td>
         </tr>
-
-
     <% end %>
     </tbody>
   </table>
