--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require rails_bootstrap_forms
  *= require bootstrap-table
+ *= require font-awesome
  *= require_tree .
  *= require_self
  */
