--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,11 @@
 
 <div class="container-fluid">
 <%= render 'layouts/messages' %>
-
+<div class="container">
  <%= yield %>
 </div>
-<%= console %>
+</div>
+<%# console %>
 <script>
 
 </script>
