--- a/app/views/diary/view.html.erb
+++ b/app/views/diary/view.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1><%= "#{@subject.name} (prowadzący: #{@subject.user.name_displayed})" %></h1>
+  <h1><%= "#{@subject.name} (prowadzący: #{@subject.user.name})" %></h1>
   <h3>Uczniowie</h3>
 </div>
 <table data-toggle="table" data-search="true">
