--- a/app/views/pupils/edit.html.erb
+++ b/app/views/pupils/edit.html.erb
@@ -18,7 +18,7 @@
     <% @pupil.subjects.each do |subject| %>
         <tr>
           <td><%= subject.name %></td>
-          <td><%= subject.user.name_displayed %></td>
+          <td><%= subject.user.name %></td>
         </tr>
     <% end %>
     </tbody>
