--- a/app/views/diary/index.html.erb
+++ b/app/views/diary/index.html.erb
@@ -13,7 +13,7 @@
   <% @subjects.each do |subject| %>
       <tr>
         <td><%= subject.name %></td>
-        <td><%= subject.user.name_displayed %></td>
+        <td><%= subject.user.name %></td>
         <td>
           <%= link_to 'Pokaż', diary_view_path({subject_id: subject}), class: 'btn btn-default btn-xs' %>
         </td>
