--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,7 +3,7 @@
     <aside class="sm-side">
       <div class="user-head">
         <div class="user-name">
-          <h5><%= current_user.name_displayed %></h5>
+          <h5><%= current_user.name %></h5>
           <span><%= current_user.email %></span>
         </div>
 
@@ -19,32 +19,12 @@
                 <h4 class="modal-title">Nowa wiadomość</h4>
               </div>
               <div class="modal-body">
-                <form role="form" class="form-horizontal">
-                  <div class="form-group">
-                    <label class="col-lg-2 control-label">Do</label>
-                    <div class="col-lg-10">
-                      <input type="text" placeholder="" id="inputEmail1" class="form-control">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-lg-2 control-label">Tytuł</label>
-                    <div class="col-lg-10">
-                      <input type="text" placeholder="" id="inputPassword1" class="form-control">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-lg-2 control-label">Wiadomość</label>
-                    <div class="col-lg-10">
-                      <textarea rows="10" cols="30" class="form-control" id="" name=""></textarea>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <div class="col-lg-offset-2 col-lg-10">
-                      <button class="btn btn-send" type="submit">Wyślij</button>
-                    </div>
-                  </div>
-                </form>
+                <%= bootstrap_form_for @message do |f| %>
+                    <%= f.collection_select :recipient_id, User.all, :id, :name , label: 'Odbiorca' %>
+                    <%= f.text_field :title, label: 'Tytuł' %>
+                    <%= f.text_area :body, Label: 'Treść', rows: 10 %>
+                    <%= f.submit 'Wyślij' %>
+                <% end %>
               </div>
             </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
@@ -53,13 +33,13 @@
 
       <ul class="inbox-nav inbox-divider">
         <li class="active">
-          <a href="#"><i class="fa fa-inbox"></i> Inbox <span class="label label-danger pull-right">2</span></a>
+          <a href="#"><i class="fa fa-inbox"></i> Odebrane <span class="label label-danger pull-right"><%= @messages.where(unread: true).count %></span></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-envelope-o"></i> Sent Mail</a>
+          <a href="#"><i class="fa fa-envelope-o"></i> Wysłane</a>
         </li>
         <li>
-          <a href="#"><i class=" fa fa-trash-o"></i> Trash</a>
+          <a href="#"><i class=" fa fa-trash-o"></i> Kosz</a>
         </li>
       </ul>
 
@@ -70,12 +50,10 @@
         <li><a href="#"> <i class=" fa fa-circle text-muted "></i>Mentaalist <p>I out of control</p></a>
         </li>
       </ul>
-
-
     </aside>
     <aside class="lg-side">
       <div class="inbox-head">
-        <h3>Inbox</h3>
+        <h3>Skrzynka odbiorcza</h3>
         <form action="#" class="pull-right position">
           <div class="input-append">
             <input type="text" class="sr-input" placeholder="Search Mail">
@@ -105,6 +83,11 @@
               <i class=" fa fa-refresh"></i>
             </a>
           </div>
+          <div class="btn-group">
+            <a data-original-title="Refresh" data-placement="top" data-toggle="dropdown" href="#" class="btn mini tooltips">
+              <i class="fa fa-trash-o"></i> Delete</a>
+          </div>
+
           <div class="btn-group hidden-phone">
             <a data-toggle="dropdown" href="#" class="btn mini blue" aria-expanded="false">
               More
@@ -141,82 +124,23 @@
           </ul>
         </div>
 
-
         <table class="table table-inbox table-hover">
           <tbody>
-          <tr class="unread">
-            <td class="inbox-small-cells">
-              <input type="checkbox" class="mail-checkbox">
-            </td>
-            <td class="inbox-small-cells"><i class="fa fa-star"></i></td>
-            <td class="view-message  dont-show">PHPClass</td>
-            <td class="view-message ">Added a new class: Login Class Fast Site</td>
-            <td class="view-message  inbox-small-cells"><i class="fa fa-paperclip"></i></td>
-            <td class="view-message  text-right">9:27 AM</td>
-          </tr>
+          <% @messages.each do |message| %>
+              <tr class="<%= 'unread' if message.unread %>">
+                <td class="inbox-small-cells">
+                  <input type="checkbox" class="mail-checkbox">
+                </td>
+                <td class="inbox-small-cells"><i class="fa fa-star"></i></td>
+                <td class="view-message  dont-show"><%= "#{message.sender.name} (#{message.sender.email})" %></td>
+                <td class="view-message "><%= message.title %></td>
+                <td class="view-message  text-right"><%= l message.created_at, format: :short %></td>
+              </tr>
+          <% end %>
 
-          <tr class="">
-            <td class="inbox-small-cells">
-              <input type="checkbox" class="mail-checkbox">
-            </td>
-            <td class="inbox-small-cells"><i class="fa fa-star"></i></td>
-            <td class="view-message dont-show">JW Player</td>
-            <td class="view-message">Last Chance: Upgrade to Pro for</td>
-            <td class="view-message inbox-small-cells"></td>
-            <td class="view-message text-right">March 15</td>
-          </tr>
-          <tr class="unread">
-            <td class="inbox-small-cells">
-              <input type="checkbox" class="mail-checkbox">
-            </td>
-            <td class="inbox-small-cells"><i class="fa fa-star"></i></td>
-            <td class="view-message dont-show">Tim Reid, S P N</td>
-            <td class="view-message">Boost Your Website Traffic</td>
-            <td class="view-message inbox-small-cells"></td>
-            <td class="view-message text-right">April 01</td>
-          </tr>
-          <tr class="">
-            <td class="inbox-small-cells">
-              <input type="checkbox" class="mail-checkbox">
-            </td>
-            <td class="inbox-small-cells"><i class="fa fa-star inbox-started"></i></td>
-            <td class="view-message dont-show">Freelancer.com <span class="label label-danger pull-right">urgent</span>
-            </td>
-            <td class="view-message">Stop wasting your visitors</td>
-            <td class="view-message inbox-small-cells"></td>
-            <td class="view-message text-right">May 23</td>
-          </tr>
           </tbody>
         </table>
       </div>
     </aside>
   </div>
 </div>
-
-
-
-<table>
-  <thead>
-  <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @messages.each do |message| %>
-      <tr>
-        <td><%= message.title %></td>
-        <td><%= message.body %></td>
-        <td><%= link_to 'Show', message %></td>
-        <td><%= link_to 'Edit', edit_message_path(message) %></td>
-        <td><%= link_to 'Destroy', message, method: :delete, data: {confirm: 'Are you sure?'} %></td>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Message', new_message_path %>
