--- a/app/views/pupils/show.html.erb
+++ b/app/views/pupils/show.html.erb
@@ -20,7 +20,7 @@
     <% @pupil.subjects.each do |subject| %>
         <tr>
           <td><%= subject.name %></td>
-          <td><%= subject.user.name_displayed %></td>
+          <td><%= subject.user.name %></td>
           <td>
             <% sum_array = Array.new %>
             <% @pupil.pupil_grades(subject).each do |pupil_grade| %>
