--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -14,7 +14,7 @@
   <% @subjects.each do |subject| %>
       <tr>
         <td><%= subject.name %></td>
-        <td><%= subject.user.name_displayed %></td>
+        <td><%= subject.user.name %></td>
         <td>
           <%= link_to 'Pokaż', subject_path(subject), class: 'btn btn-default btn-xs' %>
           <%= link_to 'Edycja', edit_subject_path(subject), class: 'btn btn-default btn-xs' %>
